<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hjozzat.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="flight">FLIGHT</string>
    <string name="hotel">HOTEL</string>
	<string name="flight_hotel">FLIGHT + HOTEL</string>
	<string name="packages">PACKAGES</string>
	<string name="car">RENT CAR</string>
	<string name="sports">SPORTS</string>
	<string name="cruise">CRUISE</string>
	<string name="visa">VISA</string>
	<string name="mybooking">MY BOOKING</string>
    <string name="lang">@drawable/lang_ar</string>
	<string name="home">Home</string>
    
	<!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>HOME</item>
        <item>HOW TO USE</item>
        <item>FAQ</item>
        <item>ABOUT US</item>
        <item>CONTACT US</item>
        <item>MAIL US</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_faq</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_contact_us</item>
        <item>@drawable/ic_mail</item>
    </array>
	
    <string name="error_title">Error</string>
    <string name="error_no_internet_title">Internet Access Not Available</string>
	<string name="error_no_internet_msg">This application requires working internet access. Please connect to the internet and try again.</string>
	<string name="error_no_internet_settings">Settings</string>
	<string name="error_no_internet_cancel">Cancel</string>
	<string name="error_no_internet_close_app">Close Application</string>
	<string name="ok">OK</string>
	<string name="exit_msg">Click again to exit</string>
    
	<string-array name="faq_array">
	    <item>What are the services that Hjozzat provide?</item>
	    <item>Hjozzat is a travel search engine and provide a variety of services to customers that includes purchasing air tickets, making hotel and resort reservations, providing tour packages and providing knowledge about specific destinations.</item>
	    <item>How do I search a flight/hotel?</item>
	    <item>Enter your search details in the Flight/Hotel search box, specifically departure airport, destination airport, departure date, return date,number of passengers and for Hotel Location and nationality. Click the "Search" button.
	        \n\nHJOZZAT.COM aggregates and shows many results regarding Flight/Hotel, review these and use the filter menu to better find the most appropriate flight/Hotel for you. Click the "Show" button.</item>
	    <item>What documents do I need to carry to check-in for my flight? Do I have to carry the credit card that was used for making the payment?</item>
	    <item>It is mandatory to carry a government issued photo identification (ID) proof along with the E-Ticket copy. The same is verified by the airport security as well as the airline at the check in counter. On presenting your photo ID proof and E-Ticket copy, your boarding pass will be issued. For international flights, your passport is the only valid photo ID proof that will be accepted.
	        \n\nIn case of an infant travelling, it is mandatory to carry the birth certificate of the infant along with the ticket.
	        \n\nIt is not mandatory to carry the credit/debit card that was used to make the payment at the time of the booking, if you have booked through HJOZZAT.COM. (we do not pass on your account details to the airline).</item>
	    <item>How can I cancel my flight tickets?</item>
	    <item>If you have a Account then follow the below procedure to cancel the ticket:
	        \n- Click on My Booking option
	        \n- Select your flight details and click on Cancel Bookings button under the Flights section.
	        \n\nYou can even login with  the Reference Number of E-Ticket to cancle the ticket.
	        \n\nIf you need to change or cancel your flight arrangements you can contact to Customer Suport  24/7 dedicated Customer support.</item>
	    <item>What should I do to obtain a paper receipt for my e-ticket itinerary?</item>
	    <item>Since you will not receive a paper receipt, itinerary, or confirmation letter automatically when you purchase an e-ticket, we suggest you keep a copy of your confirmation e-mail or print a copy of your itinerary for your records. You will also need it, along with your valid passport or other government-issued photo identification, when you check in at the airport.
	        \n\nYou will be required to check in at the airline ticket counter to receive your boarding pass. Print a copy of both your itinerary and your e-ticket confirmation e-mail to present at the ticket counter to obtain your boarding pass</item>
	    <item>How to become a registered member of Hjozzat?</item>
	    <item>Becoming a registered member of Hjozzat is easy and free of cost. To register, click on the SignIn icon in website.</item>
	    <item>Is my credit card number safe?</item>
	    <item>Customer transactions with take full advantage of Secure Sockets Layer (SSL) encryption technology. SSL technology is available on most popular Web browsers, such as Microsoft Internet Explorer, and provides a high level of security through an SSL connection.
	        \n\nIn an SSL connection, each side of the transaction has a security certificate, which your browser sends to and vice versa. Your browser then encrypts your credit card number using information from both its own certificate and the certificate. This action ensures that only can de-crypt the data, confirm that the data came from your browser and that the message has not been tampered with in transit. This "three-way" security is how most secure transactions take place over the Internet.
	        \n\nAt HJOZZAT.COM, we take security and privacy seriously.If you do not have a browser that supports secure transactions, or you are uncomfortable purchasing online, call us at +965 1234567 the first time you make a purchase. will then keep your credit card on file for future travel purchases.</item>
	    <item>How do I know my hotel reservation is confirmed?</item>
	    <item>We will send you an email confirmation after you\'ve completed your booking. You should receive the confirmation email generally within 15 minutes, although it may take up to several hours for it to arrive.
	        \n\nYou can verify your reservations online through Itineraries (linked at the top of every page), and send yourself a copy by clicking on \"Email itinerary\". You should check the spam or junk mail folder in your email to make sure your confirmation email was not blocked.</item>
	    <item>Hotel check-out</item>
	    <item>Every hotel has a specific check-out time, which will be listed on the Hjozzat hotel Cancellation Policy.</item>
	    <item>Checking out later in the day</item>
	    <item>If you want to check out of the hotel later in the day than the hotel\'s listed check-out time, call the hotel beforehand to make your request, or you can ask the front desk staff at check-in. Please remember that many hotels charge for a late check-out. For your convenience, the hotel may be able to store your luggage after check-out.</item>
	    <item>Checking out early by one or more nights</item>
	    <item>If you need to check out earlier than you originally booked, speak with the hotel front desk directly to confirm they will refund your unused night. Because it is difficult for hotels to resell a room on short notice, many hotels will not refund unused nights. Change and cancellation policies do apply, and the hotel may charge you a fee for changing or cancelling part of your reservation. For Pay Now hotels, after the hotel has confirmed they will refund your unused nights, please call us to decrease the length of your hotel stay and work with the hotel to complete your refund.</item>
	    <item>What are the different mode of payments you accept?</item>
	    <item>We accept Visa, Mastercard  and KNet for Online Bookings.</item>
	    <item>Whom do I contact to retrieve lost luggage?</item>
	    <item>Your best course of action regarding lost luggage is to contact the airline directly.
	        \nHave the following information available:
	        \n- Luggage claim ticket number(s)\n- Flight information
	        \n- Dimensions of piece(s) lost\n- Colour\n- Material (soft or hard-sided)
	        \n- Brand if available.</item>
    </string-array>
	
	<string name="about_us">About Us</string>
	<string name="about_content">HJOZZAT.COM  specialist tourist site aims to serve the needs of the traveler easily and safely and credibility, and harness all the means and possibilities for all travel related services from a single place and in a short time and at competitive prices.
		\n\nHJOZZAT.COM  search for the best offers and prices of airline, hotel, car rental, sports events and cruises.
 		\n\nHJOZZAT.COM  is your booking engine to get the best offers at the simplest and surest ways of searching where our brand  and our goal is customer satisfaction and will try all means to achieve the difficult equation which is the best price for better services.
 		\n\nAll you have to do is search for a destination, set a date, length of stay, number of rooms and residents, and to identify flights, sporting events, and cruises to get the best results and prices.
 		\n\nWe hope that our services satisfy and be useful to you in the planning of your next flights and spend the best time of the holidays.
 		\n\nIf you liked our services, please do not hesitate to make the HJOZZAT.COM  your favorite booking website.
 		\n\nNote: Do not hesitate to ask for service or assistance!</string>
	
	<string name="contact_us">Contact Us</string>
	<string name="our_office">OUR OFFICE</string>
	<string name="contact_content">www.Hjozzat.com\nOffice 13, 14 1st Floor,\nFarwaneya,\nKuwait</string>
	<string name="contact_email">info@hjozzat.com</string>
	<string name="contact_number">+96524731194</string>
		
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="logout">Logout</string>
	<string name="faq">Frequently Asked Questions</string>
	<string name="how_to_use">How to use</string>
	<string name="our_hotline">Our Hotline</string>
	<string name="our_email">Our Email</string>
	
</resources>
