<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:src="@drawable/ic_login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/login"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            
            <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="#BDBDBD" />
            
            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:padding="3dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_register" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/register"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            
            <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="#BDBDBD" />
            
            <LinearLayout
                android:id="@+id/ll_htu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_how_to_use" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/how_to_use"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="#BDBDBD" />
            
            <LinearLayout
                android:id="@+id/ll_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_faq" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/faq"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="#BDBDBD" />
            
            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_about" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/about_us"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="#BDBDBD" />
            
            <LinearLayout
                android:id="@+id/ll_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:padding="1dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_contact_us" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/contact_us"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="#BDBDBD" />
            
            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clicker"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:padding="3dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="@string/logout"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0072bc"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/our_hotline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black"
                    android:onClick="clicker"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/call_selector" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0072bc"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/our_email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black"
                    android:onClick="clicker"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/mail_selector" />
                
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    
</LinearLayout>
